--- a/_posts/2021-09-09-day01.md
+++ b/_posts/2021-09-09-day01.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "첫 git 포스팅"
+title:  "day01"
 date:   2021-09-09
 excerpt: "Minimal, one column Jekyll theme for your blog."
 project: true
@@ -12,3 +12,8 @@ tag:
 - theme
 comments: true
 ---
+
+
+## HTML Elements
+
+Below is just about everything you'll need to style in the theme. Check the source code to see the many embedded elements within paragraphs.
